[gd_scene load_steps=22 format=2]

[ext_resource path="res://player/Player.gd" type="Script" id=1]
[ext_resource path="res://player/Player.png" type="Texture" id=2]
[ext_resource path="res://player/Player_idle.png" type="Texture" id=3]
[ext_resource path="res://player/hit.wav" type="AudioStream" id=4]
[ext_resource path="res://player/heal.wav" type="AudioStream" id=5]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 8, 8 )

[sub_resource type="AtlasTexture" id=2]
atlas = ExtResource( 3 )
region = Rect2( 0, 0, 16, 16 )

[sub_resource type="AtlasTexture" id=3]
atlas = ExtResource( 3 )
region = Rect2( 16, 0, 16, 16 )

[sub_resource type="AtlasTexture" id=4]
atlas = ExtResource( 3 )
region = Rect2( 32, 0, 16, 16 )

[sub_resource type="AtlasTexture" id=5]
atlas = ExtResource( 3 )
region = Rect2( 0, 16, 16, 16 )

[sub_resource type="AtlasTexture" id=6]
atlas = ExtResource( 3 )
region = Rect2( 16, 16, 16, 16 )

[sub_resource type="AtlasTexture" id=7]
atlas = ExtResource( 3 )
region = Rect2( 32, 16, 16, 16 )

[sub_resource type="AtlasTexture" id=8]
atlas = ExtResource( 2 )
region = Rect2( 0, 0, 16, 16 )

[sub_resource type="AtlasTexture" id=9]
atlas = ExtResource( 2 )
region = Rect2( 16, 0, 16, 16 )

[sub_resource type="AtlasTexture" id=10]
atlas = ExtResource( 2 )
region = Rect2( 32, 0, 16, 16 )

[sub_resource type="AtlasTexture" id=11]
atlas = ExtResource( 2 )
region = Rect2( 0, 16, 16, 16 )

[sub_resource type="AtlasTexture" id=12]
atlas = ExtResource( 2 )
region = Rect2( 16, 16, 16, 16 )

[sub_resource type="AtlasTexture" id=13]
atlas = ExtResource( 2 )
region = Rect2( 32, 16, 16, 16 )

[sub_resource type="AtlasTexture" id=14]
atlas = ExtResource( 2 )
region = Rect2( 0, 32, 16, 16 )

[sub_resource type="AtlasTexture" id=15]
atlas = ExtResource( 2 )
region = Rect2( 16, 32, 16, 16 )

[sub_resource type="SpriteFrames" id=16]
animations = [ {
"frames": [ SubResource( 2 ), SubResource( 3 ), SubResource( 4 ), SubResource( 5 ), SubResource( 6 ), SubResource( 7 ) ],
"loop": true,
"name": "default",
"speed": 10.0
}, {
"frames": [ SubResource( 8 ), SubResource( 9 ), SubResource( 10 ), SubResource( 11 ), SubResource( 12 ), SubResource( 13 ), SubResource( 14 ), SubResource( 15 ) ],
"loop": true,
"name": "walking",
"speed": 20.0
} ]

[node name="Player" type="KinematicBody2D" groups=[
"player",
]]
pause_mode = 1
collision_mask = 14
script = ExtResource( 1 )
__meta__ = {
"_edit_group_": true
}
speed = 100

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 0, -3 )
scale = Vector2( 0.99, 0.99 )
shape = SubResource( 1 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
position = Vector2( 0, -3 )
frames = SubResource( 16 )
frame = 1
playing = true

[node name="InvulTimer" type="Timer" parent="."]
one_shot = true

[node name="HitSound" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 4 )

[node name="HealSound" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 5 )
